add background job for logging analytics of all users, at Mon, 9 a.m.

--- a/MoneyManagerAPI/Properties/launchSettings.json
+++ b/MoneyManagerAPI/Properties/launchSettings.json
@@ -24,6 +24,7 @@
             "API_KEY": "sjgienghs;vcsfrtuifs1)d56fdsaw67",
             "ASPNETCORE_ENVIRONMENT": "Development",
             "AUDIENCE": "MoneyTrackerHost",
+            "HangfireDBConnectionString": "Server=(localdb)\\MSSQLLocalDB;Database=HangfireDB;Trusted_Connection=True;",
             "ISSUER": "MoneyTrackerIssuer",
             "MoneyManagerDBConnectionString": "Server=(localdb)\\MSSQLLocalDB;Database=MoneyManagerDB;Trusted_Connection=True;",
             "TOKEN_EXPIRATION_TIME": "7200"
