--- a/Services/Services.csproj
+++ b/Services/Services.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="13.0.1" />
+    <PackageReference Include="Hangfire" Version="1.8.17" />
   </ItemGroup>
 
   <ItemGroup>
