--- a/MoneyManagerAPI/appsettings.Development.json
+++ b/MoneyManagerAPI/appsettings.Development.json
@@ -6,6 +6,9 @@
         }
     },
     "ConnectionStrings": {
-        "MoneyManagerDBConnectionString":   "Server=(localdb)\\MSSQLLocalDB;Database=MoneyManagerDB;Trusted_Connection=True;"
+        "MoneyManagerDBConnectionString": "Server=(localdb)\\MSSQLLocalDB;Database=MoneyManagerDB;Trusted_Connection=True;"
+    },
+    "NotificationService": {
+        "Uri": "http://localhost:6002"
     }
 }
