--- a/MoneyManagerAPI/Properties/launchSettings.json
+++ b/MoneyManagerAPI/Properties/launchSettings.json
@@ -27,6 +27,7 @@
             "HangfireDBConnectionString": "Server=(localdb)\\MSSQLLocalDB;Database=HangfireDB;Trusted_Connection=True;",
             "ISSUER": "MoneyTrackerIssuer",
             "MoneyManagerDBConnectionString": "Server=(localdb)\\MSSQLLocalDB;Database=MoneyManagerDB;Trusted_Connection=True;",
+            "NotificationApiKey": "31d75479d3664979949e78e2a8d68995",
             "TOKEN_EXPIRATION_TIME": "7200"
         }
     }
