add grpc job instead of http

--- a/MoneyManagerAPI/appsettings.Development.json
+++ b/MoneyManagerAPI/appsettings.Development.json
@@ -9,6 +9,7 @@
         "MoneyManagerDBConnectionString": "Server=(localdb)\\MSSQLLocalDB;Database=MoneyManagerDB;Trusted_Connection=True;"
     },
     "NotificationService": {
-        "Uri": "http://localhost:6002"
+        "Uri": "http://localhost:6002",
+        "GrpcUri": "https://localhost:6001"
     }
 }
