add rabbitmq producer

--- a/MoneyManagerAPI/appsettings.Development.json
+++ b/MoneyManagerAPI/appsettings.Development.json
@@ -10,6 +10,9 @@
     },
     "NotificationService": {
         "Uri": "http://localhost:6002",
-        "GrpcUri": "https://localhost:6001"
+        "GrpcUri": "https://localhost:6001",
+        "RabbidMQUri": "localhost",
+        "RabbidMQUsername": "guest",
+        "RabbidMQPassword": "guest"
     }
 }
