--- a/Services/Services.csproj
+++ b/Services/Services.csproj
@@ -15,6 +15,9 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Hangfire" Version="1.8.17" />
+	  <PackageReference Include="MassTransit" Version="8.3.6" />
+	  <PackageReference Include="MassTransit.AspNetCore" Version="7.3.1" />
+	  <PackageReference Include="MassTransit.RabbitMQ" Version="8.3.6" />
   </ItemGroup>
 
   <ItemGroup>
